Fix wave graphic overlapping CTA buttons for large resolutions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -235,6 +235,7 @@ footer {
 	animation: zoomOutOnLoad 1s ease-in-out 1;
 	filter: blur(1px);
 	opacity: 0.6;
+	z-index: -1; // always stay behind everything
 }
 
 @keyframes zoomOutOnLoad {
